@@ -64,7 +64,35 @@ pis("root.dict.b" in nanotest.nanotest_deephash,   True, "dict elem b")
 pis(nanotest.nanotest_deephash["root.dict.b"][0], "foo", "dict elem b[0] is 'foo'")
 pis(nanotest.nanotest_deephash["root.dict.b"][1], False, "dict elem b[1] is 'False'")
 pis("root.dict.c" in nanotest.nanotest_deephash,  False, "dict elem c doesn't exist")
-
+# blended
+nanotest.nanotest_deepstack = ["root"]
+nanotest.nanotest_deephash  = {}
+struct = {'a':1, 'q':[11, 22, ('x', 'y'), 33], 'c':{'z':44}}
+nanotest._deep_build_hash(struct, False, "msg")
+pis(len(nanotest.nanotest_deepstack),        1, "should *still* be one element, due to popping")
+pis(nanotest.nanotest_deepstack,      ["root"], "that element should *still* be 'root'")
+pis(len(nanotest.nanotest_deephash) ,        7, "seven elements now in hash")
+pis("root.dict.a" in nanotest.nanotest_deephash,   True, "elem dict.a")
+pis(nanotest.nanotest_deephash["root.dict.a"][0],     1, "elem dict.a[0] is '1'")
+pis(nanotest.nanotest_deephash["root.dict.a"][1], False, "elem dict.a[1] is 'False'")
+pis("root.dict.c.dict.z" in nanotest.nanotest_deephash,   True, "elem dict.c.dict.z")
+pis(nanotest.nanotest_deephash["root.dict.c.dict.z"][0],    44, "elem dict.c.dict.z[0] is '44'")
+pis(nanotest.nanotest_deephash["root.dict.c.dict.z"][1], False, "elem dict.c.dict.z[1] is 'False'")
+pis("root.dict.q.list.0" in nanotest.nanotest_deephash,   True, "elem dict.c.dict.q.list.0")
+pis(nanotest.nanotest_deephash["root.dict.q.list.0"][0],    11, "elem dict.c.dict.q.list.0[0] is '11'")
+pis(nanotest.nanotest_deephash["root.dict.q.list.0"][1], False, "elem dict.c.dict.q.list.0[1] is 'False'")
+pis("root.dict.q.list.1" in nanotest.nanotest_deephash,   True, "elem dict.c.dict.q.list.1")
+pis(nanotest.nanotest_deephash["root.dict.q.list.1"][0],    22, "elem dict.c.dict.q.list.1[0] is '22'")
+pis(nanotest.nanotest_deephash["root.dict.q.list.1"][1], False, "elem dict.c.dict.q.list.1[1] is 'False'")
+pis("root.dict.q.list.3" in nanotest.nanotest_deephash,   True, "elem dict.c.dict.q.list.3")
+pis(nanotest.nanotest_deephash["root.dict.q.list.3"][0],    33, "elem dict.c.dict.q.list.3[0] is '33'")
+pis(nanotest.nanotest_deephash["root.dict.q.list.3"][1], False, "elem dict.c.dict.q.list.3[1] is 'False'")
+pis("root.dict.q.list.2.tuple.0" in nanotest.nanotest_deephash,   True, "elem dict.c.dict.q.list.2.tuple.0")
+pis(nanotest.nanotest_deephash["root.dict.q.list.2.tuple.0"][0],   'x', "elem dict.c.dict.q.list.2.tuple.0[0] is 'x'")
+pis(nanotest.nanotest_deephash["root.dict.q.list.2.tuple.0"][1], False, "elem dict.c.dict.q.list.2.tuple.1[1] is 'False'")
+pis("root.dict.q.list.2.tuple.1" in nanotest.nanotest_deephash,   True, "elem dict.c.dict.q.list.2.tuple.1")
+pis(nanotest.nanotest_deephash["root.dict.q.list.2.tuple.1"][0],   'y', "elem dict.c.dict.q.list.2.tuple.1[0] is 'y'")
+pis(nanotest.nanotest_deephash["root.dict.q.list.2.tuple.1"][1], False, "elem dict.c.dict.q.list.2.tuple.1[1] is 'False'")
 
 # failures
 #
