@@ -11,6 +11,9 @@ nanotest-py Changelog
           structure and the same values at all endpoints of the
           structure).
 
+          bin/nanotest now exits with status 1 when tests fail. When a
+          test script aborts, it exits with the scripts status.
+
           bin/nanotest now sorts test files before running (bugfix)
 
           bugfixes and tweaks to nanotest.py            
